fix user count in admin_report.html

--- a/blog/templates/blog/admin_report.html
+++ b/blog/templates/blog/admin_report.html
@@ -20,7 +20,7 @@
 
 <h1>User</h1>
 <ul>
-    <li>User Count: {{ collection_count }}</li>
+    <li>User Count: {{ user_count }}</li>
     <li>Average Post Count: {{ avg_post_of_users }}</li>
     <li>Who follows most user: {{ who_follows_most_user }}: {{ follows }}</li>
     <li>Who follows most user: {{ who_following_by_most_user }}: {{ following }}</li>
