add all topics button to main page and followed topics button to profile

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -41,6 +41,9 @@
 
 
         <ul class="navbar-right">
+            <a href="{% url 'blog:all_topics' %}">
+                <span>topics</span>
+            </a>
             <a href="{% url 'blog:publications' %}">
                 <span>publications</span>
             </a>
